src/fft2d_wrap.h

/* C interface */

void fft2d_create(MPI_Comm, int, void **);
void fft2d_destroy(void *);
void fft2d_set(void *, const char *, int);
int fft2d_get_int(void *, const char *);
double fft2d_get_double(void *, const char *);
int64_t fft2d_get_int64(void *, const char *);
char *fft2d_get_string(void *, const char *, int *);
  int *fft2d_get_int_vector(void *, const char *, int *);
double *fft2d_get_double_vector(void *, const char *, int *);
void fft2d_setup(void *, int, int,
                 int, int, int, int, int, int, int, int,
                 int, int *, int *, int *);
void fft2d_setup_memory(void *, FFT_SCALAR *, FFT_SCALAR *);
void fft2d_compute(void *, FFT_SCALAR *, FFT_SCALAR *, int);
void fft2d_only_1d_ffts(void *, FFT_SCALAR *, int);
void fft2d_only_remaps(void *, FFT_SCALAR *, FFT_SCALAR *, int);
void fft2d_only_one_remap(void *, FFT_SCALAR *, FFT_SCALAR *, int, int);
void fft2d_tune(void *, int, int,
                int, int, int, int, int, int, int, int,
                int, int *, int *, int *,
                int, int, double, int);