src/remap3d_wrap.h

/* C interface */

void remap3d_create(MPI_Comm, void **);
void remap3d_destroy(void *);
void remap3d_set(void *, char *, int);
void remap3d_setup(void *,
                   int, int, int, int, int, int, int, int, int, int, int, int,
                   int, int, int, int *, int *);
void remap3d_remap(void *, FFT_SCALAR *, FFT_SCALAR *, 
                   FFT_SCALAR *, FFT_SCALAR *);